# apc-lemmy-bot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
apc_lemmy_bot/: __init__.py  __main__.py  database.py  event.py  lemmy.py  resilient_uuid.py
apc_lemmy_bot/cli/: __init__.py  __main__.py  callbacks.py  common.py  db.py  post.py  show.py
docs/source/: apc_lemmy_bot.cli.rst  apc_lemmy_bot.rst  api.rst  changelog.rst  conf.py  index.rst  license.rst  modules.rst  readme.rst  usage.rst
scripts/: build.py  clean.py  extended-dictionary.txt  glr.sh  glt.sh  rel.sh
tests/: test___main__.py
